<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AdminProfileSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:paddingLeft="@dimen/spacing_medium"
            android:text="Settings"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_pic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/usermailid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/myAccount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="gone"
        android:layout_marginTop="15dp"
        android:background="#D3D3D3"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/my_account_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:gravity="center|left"
            android:text="@string/setmyaccount"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/myPlaces"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginTop="15dp"
        android:background="#D3D3D3"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/my_loction_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:gravity="center|left"
            android:text="@string/setmyplac"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/myRequestMoney"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginTop="15dp"
        android:background="#D3D3D3"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:paddingTop="5dp"
            android:src="@drawable/account_balance_wallet"
            android:paddingBottom="5dp"
           />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:gravity="center|left"
            android:text="Pending Request Add Money"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/addModifyCat"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginTop="15dp"
        android:background="#D3D3D3"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:paddingTop="5dp"
            android:src="@drawable/category"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:gravity="center|left"
            android:text="@string/mycat"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/addModifyMoney"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginTop="15dp"
        android:background="#D3D3D3"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:paddingTop="5dp"
            android:src="@drawable/category"
            android:paddingBottom="5dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:gravity="center|left"
            android:text="@string/mycata"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btnshopPrec"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:background="#D3D3D3"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/star_icon" />

        <TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:gravity="center|left"
            android:text="@string/setmyprec"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnHelp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="#D3D3D3"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/help_icon" />

        <TextView

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:gravity="center|left"
            android:text="@string/setmyhelp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inviteMsg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="#D3D3D3"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/invite_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:gravity="center|left"
            android:text="@string/setshare"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>